# AutoWax4C

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/cipher/userlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  changelevel.cpp  changelevel.h  config.json  contextops.cpp  contextops.h  heartselector.cpp  heartselector.h  iap_purchase.cpp  iap_purchase.h  invitemanager.cpp  invitemanager.h  lights.cpp  lights.h  main.cpp  main.h  scandecode.cpp  scandecode.h  spiritshop.cpp  spiritshop.h  translation.cpp  translation.h  translation_chinese.h  worldquests.cpp  worldquests.h
app/src/main/cpp/dlfake/: fake_dlfcn.c  fake_dlfcn.h
app/src/main/cpp/includes/: fileselector.h
app/src/main/cpp/includes/cipher/: Cipher.h  CipherArm64.h
app/src/main/cpp/includes/iconloader/: IconLoader.h
app/src/main/cpp/includes/imgui/: androidbk.h
app/src/main/cpp/includes/misc/: Logger.h
app/src/main/java/git/artdeell/autowax/: AutoWax.java  CRArray.java  CandleRunBatch.java  CollectGiftTask.java  Gift.java  GiftTask.java  SkyProtocolException.java
app/src/main/java/git/artdeell/autowax/heartlist/: Friend.java  HeartList.java
app/src/main/java/git/artdeell/autowax/iap/: IapPurchase.java
app/src/main/java/git/artdeell/autowax/invitemanager/: Invite.java  InviteManager.java  InviteUtils.java
app/src/main/java/git/artdeell/autowax/spiritshop/: Element.java  LevelCouple.java  SpiritShop.java
app/src/main/java/git/artdeell/autowax/worldquest/: CombinedSpiritData.java  Spirits.java
app/src/main/java/git/artdeell/aw4c/: CanvasMain.java  ContextOps.java  Keep.java  KeyVerification.java  Locale.java  LocaleChinese.java  LocaleDefault.java  LocaleInt.java  LocaleRussian.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/cipher/userlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
